vlib/v/checker/tests/voidptr_cast_to_struct_err.vv
struct Foo {}

fn main() {
	a := Foo(unsafe { nil })
	println(a)
}
